--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
-    "dev": "cross-env NODE_ENV=development electron .",
+    "dev": "tsc && cross-env NODE_ENV=development electron .",
     "start": "npm run build && cross-env NODE_ENV=production electron ."
   },
   "devDependencies": {
